apps/dashboard/.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $NX_TASK_TARGET_PROJECT
  namespace: $BRANCH
spec:
  selector:
    app: $NX_TASK_TARGET_PROJECT
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
